fix alignment of menu pictures

--- a/styles/main_menu.scss
+++ b/styles/main_menu.scss
@@ -9,21 +9,29 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: stretch;
+  align-items: center;
 
-  height: 7em;
-  width: 9em;
+  height: 6em;
+  width: 8em;
 
+  border: 2px solid rgba(255, 213, 0, 0.784);
   border-radius: 15px;
+  padding: 1em;
+  margin: 1em;
 }
 
 .items:hover {
   box-shadow: 5px 5px 5px rgba(89, 116, 187, 0.5);
 }
 
+.info {
+  display: flex;
+  flex-direction: column;
+}
+
 #dish_pic {
   width: 70%;
-  padding-left: 2em;
+
 
   border-radius: 10px;
 }
@@ -34,8 +42,7 @@
 
 #dish_description {
   font-size: x-small;
-
-
+  font-style: italic;
 }
 
 #dish_price {
